Github pages setup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myportfolio",
-  "homepage": "https://olapuajay.github.io/portfolio/",
+  "homepage": "https://OmkarReddy99.github.io/portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
